--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <app-game></app-game>
+  </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
   <footer>Vee Are</footer>
 </body>
